--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A user management service",
   "main": "index.js",
   "scripts": {
-    "dev" :"node src/server.js"
+    "dev": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/chaudhariraj/AUTH_SERVICE_BACKEND/issues"
   },
-  "homepage": "https://github.com/chaudhariraj/AUTH_SERVICE_BACKEND#readme"
+  "homepage": "https://github.com/chaudhariraj/AUTH_SERVICE_BACKEND#readme",
+  "devDependencies": {
+    "@types/node": "^20.11.16",
+    "typescript": "^5.3.3"
+  }
 }
