--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A user management service",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/server.js"
+    "dev": "node src/server.js",
+    "lint": "eslint .",
+    "lint:fix" : "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,10 @@
   "homepage": "https://github.com/chaudhariraj/AUTH_SERVICE_BACKEND#readme",
   "devDependencies": {
     "@types/node": "^20.11.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "typescript": "^5.3.3"
   }
 }
