--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node src/server.js",
     "lint": "eslint .",
-    "lint:fix" : "eslint . --fix"
+    "lint:fix" : "eslint . --fix",
+    "prepare": "husky install" 
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.10",
     "typescript": "^5.3.3"
   }
 }
