--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "node src/server.js",
     "lint": "eslint .",
-    "lint:fix" : "eslint . --fix",
-    "prepare": "husky install" 
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
     "eslint-config-prettier": "^9.1.0",
     "husky": "^9.0.10",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.1"
   }
 }
