--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/chaudhariraj/AUTH_SERVICE_BACKEND#readme",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/node": "^20.11.16",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -35,6 +36,7 @@
   "dependencies": {
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "winston": "^3.11.0"
   }
 }
